Regression: Snap to vertex by Active Element moves item further and further away each time. #107262

Closed
opened 2023-04-23 04:56:20 +02:00 by Alma Undun · 2 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-17 22:29, hash: 2f743b0a9248
Worked: 3.5.0

Caused by 18232af3ee

Short description of error

  • With transform orientation "Global"
  • Transform Pivot Point must set to "Active Element"
    -"Snap to Vertex - Active"

Then each time I snap one item to another it moves further away from the snap location.

Exact steps for others to reproduce the error

  • Open provided file.
  • Move the cube so it snaps onto a vertex on the sphere. Confirm.
  • Move the same cube again, try to snap it to a vertex on the sphere, the cube jumps away.
  • Move the cube again and the cube jumps away further.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-17 22:29, hash: `2f743b0a9248` Worked: 3.5.0 Caused by 18232af3ee **Short description of error** - With transform orientation "Global" - Transform Pivot Point must set to "Active Element" -"Snap to Vertex - Active" Then each time I snap one item to another it moves further away from the snap location. **Exact steps for others to reproduce the error** - Open provided file. - Move the cube so it snaps onto a vertex on the sphere. Confirm. - Move the same cube again, try to snap it to a vertex on the sphere, the cube jumps away. - Move the cube again and the cube jumps away further.
Alma Undun added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-23 04:56:20 +02:00
Member

Can confirm the issue. Moving the cube seems to add a delta of snap_vertex_global_position on the translation initially, but it only does that on the second time of moving and afterwards.

Verifiable by dragging the sphere to different locations and observe the transformation initially.

Can confirm the issue. Moving the cube seems to add a delta of `snap_vertex_global_position` on the translation initially, but it only does that on the second time of moving and afterwards. Verifiable by dragging the sphere to different locations and observe the transformation initially.
YimingWu added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-23 08:55:57 +02:00
Member

Caused by 18232af3ee cc @mano-wii

Set to High priority due to recent regression.

Caused by 18232af3eedb cc @mano-wii Set to High priority due to recent regression.
YimingWu added
Priority
High
and removed
Priority
Normal
labels 2023-04-23 09:13:25 +02:00
Philipp Oeser changed title from Snap to vertex by Active Element moves item further and further away each time. to Regression: Snap to vertex by Active Element moves item further and further away each time. 2023-04-24 09:33:19 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-24 16:38:52 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107262
No description provided.