Fix #107262: snap source of type Active Element sometimes fails

Remove micro optimization that seeks to reuse the active center 
alculation.

This operation is lightweight and reusing its result only adds an
unnecessary dependency.