source/blender/editors/transform/transform_snap.cc
@@ -1246,13 +1246,7 @@ static void snap_source_active_fn(TransInfo *t)
 {
   /* Only need to calculate once */
   if ((t->tsnap.status & SNAP_SOURCE_FOUND) == 0) {
-    if (t->around == V3D_AROUND_ACTIVE) {
-      /* Just copy the already calculated active center. */
-      copy_v3_v3(t->tsnap.snap_source, t->center_global);
-      TargetSnapOffset(t, nullptr);
-      t->tsnap.status |= SNAP_SOURCE_FOUND;
-    }
-    else if (calculateCenterActive(t, true, t->tsnap.snap_source)) {
+    if (calculateCenterActive(t, true, t->tsnap.snap_source)) {
       TargetSnapOffset(t, nullptr);
       t->tsnap.status |= SNAP_SOURCE_FOUND;
     }
